chore: checkpoint before comment cleanup